// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given there are no surveys available in blaise should render the page correctly when no surveys are returned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          Bonjour tout le monde Jake Bullet
        </div>
      </div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
        >
          <div
            class="ons-panel__body "
          >
            There are no surveys available
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
    >
      <div
        class="ons-panel__body "
      >
        Bonjour tout le monde Jake Bullet
      </div>
    </div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          There are no surveys available
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there are surveys available in blaise should render the supervisor page correctly when surveys are returned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          Bonjour tout le monde Jake Bullet
        </div>
      </div>
      <div
        data-testid="Surveys"
      >
        <br />
        <div
          class="ons-accordion"
          id="survey-accordion"
        >
          <details
            class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
            data-btn-close="Hide"
            data-group="accordion"
            id="survey-accordion-0"
          >
            <summary
              aria-controls="survey-accordion-0"
              aria-expanded="false"
              class="ons-collapsible__heading ons-js-collapsible-heading"
              data-ga-action="Open panel"
              data-testid="survey-accordion-0-heading"
              role="link"
              tabindex="0"
            >
              <div
                class="ons-collapsible__controls"
              >
                <h2
                  class="ons-collapsible__title"
                >
                  LMS
                </h2>
                <span
                  class="ons-collapsible__icon"
                >
                  <svg
                    class="ons-svg-icon"
                    focusable="false"
                    viewBox="0 0 7.5 12.85"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                      transform="translate(-5.02 -1.59)"
                    />
                  </svg>
                </span>
              </div>
            </summary>
            <div
              aria-hidden="true"
              class="ons-collapsible__content ons-js-collapsible-content"
              data-testid="survey-accordion-0-content"
              id="survey-accordion-0-content"
            >
              <br />
              <div
                class="ons-accordion"
                id="questionnaire-accordion"
              >
                <button
                  class="ons-btn ons-js-collapsible-all ons-u-mb-s ons-btn--secondary ons-btn--small"
                  data-close-all="Hide all"
                  data-group="accordion"
                  data-testid="questionnaire-accordion-show-all"
                  type="button"
                >
                  <span
                    class="ons-btn__inner ons-js-collapsible-all-inner"
                  >
                    Show all
                  </span>
                </button>
                <details
                  class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
                  data-btn-close="Hide"
                  data-group="accordion"
                  id="questionnaire-accordion-0"
                >
                  <summary
                    aria-controls="questionnaire-accordion-0"
                    aria-expanded="false"
                    class="ons-collapsible__heading ons-js-collapsible-heading"
                    data-ga-action="Open panel"
                    data-testid="questionnaire-accordion-0-heading"
                    role="link"
                    tabindex="0"
                  >
                    <div
                      class="ons-collapsible__controls"
                    >
                      <h2
                        class="ons-collapsible__title"
                      >
                        LMS2101_AA1
                      </h2>
                      <span
                        class="ons-collapsible__icon"
                      >
                        <svg
                          class="ons-svg-icon"
                          focusable="false"
                          viewBox="0 0 7.5 12.85"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                            transform="translate(-5.02 -1.59)"
                          />
                        </svg>
                      </span>
                    </div>
                  </summary>
                  <div
                    aria-hidden="true"
                    class="ons-collapsible__content ons-js-collapsible-content"
                    data-testid="questionnaire-accordion-0-content"
                    id="questionnaire-accordion-0-content"
                  >
                    <div
                      style="margin: 0px 0px 0px 2px; padding: 10px; background-color: rgb(231, 243, 236); border: 1px dotted;"
                    >
                      <dl
                        aria-label="Information about this business and its survey requirements"
                        class="ons-description-list ons-description-list__items ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                        title="Information about this business and its survey requirements"
                      >
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Field period:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2021-01-01T00:00:00
                          </strong>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1000
                          </strong>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases allocated:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            30
                          </strong>
                           
                          <a
                            href="/"
                          >
                            Allocate
                          </a>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            Doctor Doom:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            10
                          </strong>
                           
                          case(s) allocated
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            5
                          </strong>
                           
                          case(s) not started
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2
                          </strong>
                           
                          case(s) in progress
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2
                          </strong>
                           
                          case(s) completed
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1
                          </strong>
                           
                          case(s) with queries
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            Captain Fantastic:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            5
                          </strong>
                           
                          case(s) allocated
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            4
                          </strong>
                           
                          case(s) not started
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1
                          </strong>
                           
                          case(s) in progress
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            The Thing:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            0
                          </strong>
                           
                          case(s) allocated
                        </dd>
                      </dl>
                    </div>
                  </div>
                </details>
                <details
                  class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
                  data-btn-close="Hide"
                  data-group="accordion"
                  id="questionnaire-accordion-1"
                >
                  <summary
                    aria-controls="questionnaire-accordion-1"
                    aria-expanded="false"
                    class="ons-collapsible__heading ons-js-collapsible-heading"
                    data-ga-action="Open panel"
                    data-testid="questionnaire-accordion-1-heading"
                    role="link"
                    tabindex="0"
                  >
                    <div
                      class="ons-collapsible__controls"
                    >
                      <h2
                        class="ons-collapsible__title"
                      >
                        LMS2101_AB1
                      </h2>
                      <span
                        class="ons-collapsible__icon"
                      >
                        <svg
                          class="ons-svg-icon"
                          focusable="false"
                          viewBox="0 0 7.5 12.85"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                            transform="translate(-5.02 -1.59)"
                          />
                        </svg>
                      </span>
                    </div>
                  </summary>
                  <div
                    aria-hidden="true"
                    class="ons-collapsible__content ons-js-collapsible-content"
                    data-testid="questionnaire-accordion-1-content"
                    id="questionnaire-accordion-1-content"
                  >
                    <div
                      style="margin: 0px 0px 0px 2px; padding: 10px; background-color: rgb(231, 243, 236); border: 1px dotted;"
                    >
                      <dl
                        aria-label="Information about this business and its survey requirements"
                        class="ons-description-list ons-description-list__items ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                        title="Information about this business and its survey requirements"
                      >
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Field period:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2021-01-01T00:00:00
                          </strong>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1000
                          </strong>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases allocated:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            30
                          </strong>
                           
                          <a
                            href="/"
                          >
                            Allocate
                          </a>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            Doctor Doom:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            10
                          </strong>
                           
                          case(s) allocated
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            5
                          </strong>
                           
                          case(s) not started
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2
                          </strong>
                           
                          case(s) in progress
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2
                          </strong>
                           
                          case(s) completed
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1
                          </strong>
                           
                          case(s) with queries
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            Captain Fantastic:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            5
                          </strong>
                           
                          case(s) allocated
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            4
                          </strong>
                           
                          case(s) not started
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1
                          </strong>
                           
                          case(s) in progress
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            The Thing:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            0
                          </strong>
                           
                          case(s) allocated
                        </dd>
                      </dl>
                    </div>
                  </div>
                </details>
                <details
                  class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
                  data-btn-close="Hide"
                  data-group="accordion"
                  id="questionnaire-accordion-2"
                >
                  <summary
                    aria-controls="questionnaire-accordion-2"
                    aria-expanded="false"
                    class="ons-collapsible__heading ons-js-collapsible-heading"
                    data-ga-action="Open panel"
                    data-testid="questionnaire-accordion-2-heading"
                    role="link"
                    tabindex="0"
                  >
                    <div
                      class="ons-collapsible__controls"
                    >
                      <h2
                        class="ons-collapsible__title"
                      >
                        LMS2101_AC1
                      </h2>
                      <span
                        class="ons-collapsible__icon"
                      >
                        <svg
                          class="ons-svg-icon"
                          focusable="false"
                          viewBox="0 0 7.5 12.85"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                            transform="translate(-5.02 -1.59)"
                          />
                        </svg>
                      </span>
                    </div>
                  </summary>
                  <div
                    aria-hidden="true"
                    class="ons-collapsible__content ons-js-collapsible-content"
                    data-testid="questionnaire-accordion-2-content"
                    id="questionnaire-accordion-2-content"
                  >
                    <div
                      style="margin: 0px 0px 0px 2px; padding: 10px; background-color: rgb(231, 243, 236); border: 1px dotted;"
                    >
                      <dl
                        aria-label="Information about this business and its survey requirements"
                        class="ons-description-list ons-description-list__items ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                        title="Information about this business and its survey requirements"
                      >
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Field period:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2021-01-01T00:00:00
                          </strong>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1000
                          </strong>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases allocated:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            30
                          </strong>
                           
                          <a
                            href="/"
                          >
                            Allocate
                          </a>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            Doctor Doom:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            10
                          </strong>
                           
                          case(s) allocated
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            5
                          </strong>
                           
                          case(s) not started
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2
                          </strong>
                           
                          case(s) in progress
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2
                          </strong>
                           
                          case(s) completed
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1
                          </strong>
                           
                          case(s) with queries
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            Captain Fantastic:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            5
                          </strong>
                           
                          case(s) allocated
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            4
                          </strong>
                           
                          case(s) not started
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1
                          </strong>
                           
                          case(s) in progress
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            The Thing:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            0
                          </strong>
                           
                          case(s) allocated
                        </dd>
                      </dl>
                    </div>
                  </div>
                </details>
              </div>
            </div>
          </details>
          <details
            class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
            data-btn-close="Hide"
            data-group="accordion"
            id="survey-accordion-1"
          >
            <summary
              aria-controls="survey-accordion-1"
              aria-expanded="false"
              class="ons-collapsible__heading ons-js-collapsible-heading"
              data-ga-action="Open panel"
              data-testid="survey-accordion-1-heading"
              role="link"
              tabindex="0"
            >
              <div
                class="ons-collapsible__controls"
              >
                <h2
                  class="ons-collapsible__title"
                >
                  OPN
                </h2>
                <span
                  class="ons-collapsible__icon"
                >
                  <svg
                    class="ons-svg-icon"
                    focusable="false"
                    viewBox="0 0 7.5 12.85"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                      transform="translate(-5.02 -1.59)"
                    />
                  </svg>
                </span>
              </div>
            </summary>
            <div
              aria-hidden="true"
              class="ons-collapsible__content ons-js-collapsible-content"
              data-testid="survey-accordion-1-content"
              id="survey-accordion-1-content"
            >
              <br />
              <div
                class="ons-accordion"
                id="questionnaire-accordion"
              >
                <button
                  class="ons-btn ons-js-collapsible-all ons-u-mb-s ons-btn--secondary ons-btn--small"
                  data-close-all="Hide all"
                  data-group="accordion"
                  data-testid="questionnaire-accordion-show-all"
                  type="button"
                >
                  <span
                    class="ons-btn__inner ons-js-collapsible-all-inner"
                  >
                    Show all
                  </span>
                </button>
                <details
                  class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
                  data-btn-close="Hide"
                  data-group="accordion"
                  id="questionnaire-accordion-0"
                >
                  <summary
                    aria-controls="questionnaire-accordion-0"
                    aria-expanded="false"
                    class="ons-collapsible__heading ons-js-collapsible-heading"
                    data-ga-action="Open panel"
                    data-testid="questionnaire-accordion-0-heading"
                    role="link"
                    tabindex="0"
                  >
                    <div
                      class="ons-collapsible__controls"
                    >
                      <h2
                        class="ons-collapsible__title"
                      >
                        OPN2201A
                      </h2>
                      <span
                        class="ons-collapsible__icon"
                      >
                        <svg
                          class="ons-svg-icon"
                          focusable="false"
                          viewBox="0 0 7.5 12.85"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                            transform="translate(-5.02 -1.59)"
                          />
                        </svg>
                      </span>
                    </div>
                  </summary>
                  <div
                    aria-hidden="true"
                    class="ons-collapsible__content ons-js-collapsible-content"
                    data-testid="questionnaire-accordion-0-content"
                    id="questionnaire-accordion-0-content"
                  >
                    <div
                      style="margin: 0px 0px 0px 2px; padding: 10px; background-color: rgb(231, 243, 236); border: 1px dotted;"
                    >
                      <dl
                        aria-label="Information about this business and its survey requirements"
                        class="ons-description-list ons-description-list__items ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                        title="Information about this business and its survey requirements"
                      >
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Field period:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2022-01-01T00:00:00
                          </strong>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1000
                          </strong>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          Number of cases allocated:
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            30
                          </strong>
                           
                          <a
                            href="/"
                          >
                            Allocate
                          </a>
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            Doctor Doom:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            10
                          </strong>
                           
                          case(s) allocated
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            5
                          </strong>
                           
                          case(s) not started
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2
                          </strong>
                           
                          case(s) in progress
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            2
                          </strong>
                           
                          case(s) completed
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1
                          </strong>
                           
                          case(s) with queries
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            Captain Fantastic:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            5
                          </strong>
                           
                          case(s) allocated
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            4
                          </strong>
                           
                          case(s) not started
                        </dd>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            1
                          </strong>
                           
                          case(s) in progress
                        </dd>
                        <dt
                          class="ons-description-list__term ons-grid__col ons-col-5@m"
                        >
                          <a
                            href="/"
                          >
                            The Thing:
                          </a>
                        </dt>
                        <dd
                          class="ons-description-list__value ons-grid__col ons-col-7@m"
                        >
                          <strong>
                            0
                          </strong>
                           
                          case(s) allocated
                        </dd>
                      </dl>
                    </div>
                  </div>
                </details>
              </div>
            </div>
          </details>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
    >
      <div
        class="ons-panel__body "
      >
        Bonjour tout le monde Jake Bullet
      </div>
    </div>
    <div
      data-testid="Surveys"
    >
      <br />
      <div
        class="ons-accordion"
        id="survey-accordion"
      >
        <details
          class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
          data-btn-close="Hide"
          data-group="accordion"
          id="survey-accordion-0"
        >
          <summary
            aria-controls="survey-accordion-0"
            aria-expanded="false"
            class="ons-collapsible__heading ons-js-collapsible-heading"
            data-ga-action="Open panel"
            data-testid="survey-accordion-0-heading"
            role="link"
            tabindex="0"
          >
            <div
              class="ons-collapsible__controls"
            >
              <h2
                class="ons-collapsible__title"
              >
                LMS
              </h2>
              <span
                class="ons-collapsible__icon"
              >
                <svg
                  class="ons-svg-icon"
                  focusable="false"
                  viewBox="0 0 7.5 12.85"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                    transform="translate(-5.02 -1.59)"
                  />
                </svg>
              </span>
            </div>
          </summary>
          <div
            aria-hidden="true"
            class="ons-collapsible__content ons-js-collapsible-content"
            data-testid="survey-accordion-0-content"
            id="survey-accordion-0-content"
          >
            <br />
            <div
              class="ons-accordion"
              id="questionnaire-accordion"
            >
              <button
                class="ons-btn ons-js-collapsible-all ons-u-mb-s ons-btn--secondary ons-btn--small"
                data-close-all="Hide all"
                data-group="accordion"
                data-testid="questionnaire-accordion-show-all"
                type="button"
              >
                <span
                  class="ons-btn__inner ons-js-collapsible-all-inner"
                >
                  Show all
                </span>
              </button>
              <details
                class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
                data-btn-close="Hide"
                data-group="accordion"
                id="questionnaire-accordion-0"
              >
                <summary
                  aria-controls="questionnaire-accordion-0"
                  aria-expanded="false"
                  class="ons-collapsible__heading ons-js-collapsible-heading"
                  data-ga-action="Open panel"
                  data-testid="questionnaire-accordion-0-heading"
                  role="link"
                  tabindex="0"
                >
                  <div
                    class="ons-collapsible__controls"
                  >
                    <h2
                      class="ons-collapsible__title"
                    >
                      LMS2101_AA1
                    </h2>
                    <span
                      class="ons-collapsible__icon"
                    >
                      <svg
                        class="ons-svg-icon"
                        focusable="false"
                        viewBox="0 0 7.5 12.85"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                          transform="translate(-5.02 -1.59)"
                        />
                      </svg>
                    </span>
                  </div>
                </summary>
                <div
                  aria-hidden="true"
                  class="ons-collapsible__content ons-js-collapsible-content"
                  data-testid="questionnaire-accordion-0-content"
                  id="questionnaire-accordion-0-content"
                >
                  <div
                    style="margin: 0px 0px 0px 2px; padding: 10px; background-color: rgb(231, 243, 236); border: 1px dotted;"
                  >
                    <dl
                      aria-label="Information about this business and its survey requirements"
                      class="ons-description-list ons-description-list__items ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                      title="Information about this business and its survey requirements"
                    >
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Field period:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2021-01-01T00:00:00
                        </strong>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1000
                        </strong>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases allocated:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          30
                        </strong>
                         
                        <a
                          href="/"
                        >
                          Allocate
                        </a>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          Doctor Doom:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          10
                        </strong>
                         
                        case(s) allocated
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          5
                        </strong>
                         
                        case(s) not started
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2
                        </strong>
                         
                        case(s) in progress
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2
                        </strong>
                         
                        case(s) completed
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1
                        </strong>
                         
                        case(s) with queries
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          Captain Fantastic:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          5
                        </strong>
                         
                        case(s) allocated
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          4
                        </strong>
                         
                        case(s) not started
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1
                        </strong>
                         
                        case(s) in progress
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          The Thing:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          0
                        </strong>
                         
                        case(s) allocated
                      </dd>
                    </dl>
                  </div>
                </div>
              </details>
              <details
                class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
                data-btn-close="Hide"
                data-group="accordion"
                id="questionnaire-accordion-1"
              >
                <summary
                  aria-controls="questionnaire-accordion-1"
                  aria-expanded="false"
                  class="ons-collapsible__heading ons-js-collapsible-heading"
                  data-ga-action="Open panel"
                  data-testid="questionnaire-accordion-1-heading"
                  role="link"
                  tabindex="0"
                >
                  <div
                    class="ons-collapsible__controls"
                  >
                    <h2
                      class="ons-collapsible__title"
                    >
                      LMS2101_AB1
                    </h2>
                    <span
                      class="ons-collapsible__icon"
                    >
                      <svg
                        class="ons-svg-icon"
                        focusable="false"
                        viewBox="0 0 7.5 12.85"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                          transform="translate(-5.02 -1.59)"
                        />
                      </svg>
                    </span>
                  </div>
                </summary>
                <div
                  aria-hidden="true"
                  class="ons-collapsible__content ons-js-collapsible-content"
                  data-testid="questionnaire-accordion-1-content"
                  id="questionnaire-accordion-1-content"
                >
                  <div
                    style="margin: 0px 0px 0px 2px; padding: 10px; background-color: rgb(231, 243, 236); border: 1px dotted;"
                  >
                    <dl
                      aria-label="Information about this business and its survey requirements"
                      class="ons-description-list ons-description-list__items ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                      title="Information about this business and its survey requirements"
                    >
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Field period:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2021-01-01T00:00:00
                        </strong>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1000
                        </strong>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases allocated:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          30
                        </strong>
                         
                        <a
                          href="/"
                        >
                          Allocate
                        </a>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          Doctor Doom:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          10
                        </strong>
                         
                        case(s) allocated
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          5
                        </strong>
                         
                        case(s) not started
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2
                        </strong>
                         
                        case(s) in progress
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2
                        </strong>
                         
                        case(s) completed
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1
                        </strong>
                         
                        case(s) with queries
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          Captain Fantastic:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          5
                        </strong>
                         
                        case(s) allocated
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          4
                        </strong>
                         
                        case(s) not started
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1
                        </strong>
                         
                        case(s) in progress
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          The Thing:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          0
                        </strong>
                         
                        case(s) allocated
                      </dd>
                    </dl>
                  </div>
                </div>
              </details>
              <details
                class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
                data-btn-close="Hide"
                data-group="accordion"
                id="questionnaire-accordion-2"
              >
                <summary
                  aria-controls="questionnaire-accordion-2"
                  aria-expanded="false"
                  class="ons-collapsible__heading ons-js-collapsible-heading"
                  data-ga-action="Open panel"
                  data-testid="questionnaire-accordion-2-heading"
                  role="link"
                  tabindex="0"
                >
                  <div
                    class="ons-collapsible__controls"
                  >
                    <h2
                      class="ons-collapsible__title"
                    >
                      LMS2101_AC1
                    </h2>
                    <span
                      class="ons-collapsible__icon"
                    >
                      <svg
                        class="ons-svg-icon"
                        focusable="false"
                        viewBox="0 0 7.5 12.85"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                          transform="translate(-5.02 -1.59)"
                        />
                      </svg>
                    </span>
                  </div>
                </summary>
                <div
                  aria-hidden="true"
                  class="ons-collapsible__content ons-js-collapsible-content"
                  data-testid="questionnaire-accordion-2-content"
                  id="questionnaire-accordion-2-content"
                >
                  <div
                    style="margin: 0px 0px 0px 2px; padding: 10px; background-color: rgb(231, 243, 236); border: 1px dotted;"
                  >
                    <dl
                      aria-label="Information about this business and its survey requirements"
                      class="ons-description-list ons-description-list__items ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                      title="Information about this business and its survey requirements"
                    >
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Field period:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2021-01-01T00:00:00
                        </strong>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1000
                        </strong>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases allocated:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          30
                        </strong>
                         
                        <a
                          href="/"
                        >
                          Allocate
                        </a>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          Doctor Doom:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          10
                        </strong>
                         
                        case(s) allocated
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          5
                        </strong>
                         
                        case(s) not started
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2
                        </strong>
                         
                        case(s) in progress
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2
                        </strong>
                         
                        case(s) completed
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1
                        </strong>
                         
                        case(s) with queries
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          Captain Fantastic:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          5
                        </strong>
                         
                        case(s) allocated
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          4
                        </strong>
                         
                        case(s) not started
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1
                        </strong>
                         
                        case(s) in progress
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          The Thing:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          0
                        </strong>
                         
                        case(s) allocated
                      </dd>
                    </dl>
                  </div>
                </div>
              </details>
            </div>
          </div>
        </details>
        <details
          class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
          data-btn-close="Hide"
          data-group="accordion"
          id="survey-accordion-1"
        >
          <summary
            aria-controls="survey-accordion-1"
            aria-expanded="false"
            class="ons-collapsible__heading ons-js-collapsible-heading"
            data-ga-action="Open panel"
            data-testid="survey-accordion-1-heading"
            role="link"
            tabindex="0"
          >
            <div
              class="ons-collapsible__controls"
            >
              <h2
                class="ons-collapsible__title"
              >
                OPN
              </h2>
              <span
                class="ons-collapsible__icon"
              >
                <svg
                  class="ons-svg-icon"
                  focusable="false"
                  viewBox="0 0 7.5 12.85"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                    transform="translate(-5.02 -1.59)"
                  />
                </svg>
              </span>
            </div>
          </summary>
          <div
            aria-hidden="true"
            class="ons-collapsible__content ons-js-collapsible-content"
            data-testid="survey-accordion-1-content"
            id="survey-accordion-1-content"
          >
            <br />
            <div
              class="ons-accordion"
              id="questionnaire-accordion"
            >
              <button
                class="ons-btn ons-js-collapsible-all ons-u-mb-s ons-btn--secondary ons-btn--small"
                data-close-all="Hide all"
                data-group="accordion"
                data-testid="questionnaire-accordion-show-all"
                type="button"
              >
                <span
                  class="ons-btn__inner ons-js-collapsible-all-inner"
                >
                  Show all
                </span>
              </button>
              <details
                class="ons-collapsible ons-js-collapsible ons-collapsible--accordion "
                data-btn-close="Hide"
                data-group="accordion"
                id="questionnaire-accordion-0"
              >
                <summary
                  aria-controls="questionnaire-accordion-0"
                  aria-expanded="false"
                  class="ons-collapsible__heading ons-js-collapsible-heading"
                  data-ga-action="Open panel"
                  data-testid="questionnaire-accordion-0-heading"
                  role="link"
                  tabindex="0"
                >
                  <div
                    class="ons-collapsible__controls"
                  >
                    <h2
                      class="ons-collapsible__title"
                    >
                      OPN2201A
                    </h2>
                    <span
                      class="ons-collapsible__icon"
                    >
                      <svg
                        class="ons-svg-icon"
                        focusable="false"
                        viewBox="0 0 7.5 12.85"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                          transform="translate(-5.02 -1.59)"
                        />
                      </svg>
                    </span>
                  </div>
                </summary>
                <div
                  aria-hidden="true"
                  class="ons-collapsible__content ons-js-collapsible-content"
                  data-testid="questionnaire-accordion-0-content"
                  id="questionnaire-accordion-0-content"
                >
                  <div
                    style="margin: 0px 0px 0px 2px; padding: 10px; background-color: rgb(231, 243, 236); border: 1px dotted;"
                  >
                    <dl
                      aria-label="Information about this business and its survey requirements"
                      class="ons-description-list ons-description-list__items ons-grid ons-grid--gutterless ons-u-cf ons-u-mb-no"
                      title="Information about this business and its survey requirements"
                    >
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Field period:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2022-01-01T00:00:00
                        </strong>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1000
                        </strong>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        Number of cases allocated:
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          30
                        </strong>
                         
                        <a
                          href="/"
                        >
                          Allocate
                        </a>
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          Doctor Doom:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          10
                        </strong>
                         
                        case(s) allocated
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          5
                        </strong>
                         
                        case(s) not started
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2
                        </strong>
                         
                        case(s) in progress
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          2
                        </strong>
                         
                        case(s) completed
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1
                        </strong>
                         
                        case(s) with queries
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          Captain Fantastic:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          5
                        </strong>
                         
                        case(s) allocated
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          4
                        </strong>
                         
                        case(s) not started
                      </dd>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          1
                        </strong>
                         
                        case(s) in progress
                      </dd>
                      <dt
                        class="ons-description-list__term ons-grid__col ons-col-5@m"
                      >
                        <a
                          href="/"
                        >
                          The Thing:
                        </a>
                      </dt>
                      <dd
                        class="ons-description-list__value ons-grid__col ons-col-7@m"
                      >
                        <strong>
                          0
                        </strong>
                         
                        case(s) allocated
                      </dd>
                    </dl>
                  </div>
                </div>
              </details>
            </div>
          </div>
        </details>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there the blaise rest api is not available should render the page correctly for the user when an error occurs 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          Bonjour tout le monde Jake Bullet
        </div>
      </div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--error ons-panel--no-title  ons-u-mt-m"
        >
          <div
            class="ons-panel__body "
          >
            try again in a few minutes
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
    >
      <div
        class="ons-panel__body "
      >
        Bonjour tout le monde Jake Bullet
      </div>
    </div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--error ons-panel--no-title  ons-u-mt-m"
      >
        <div
          class="ons-panel__body "
        >
          try again in a few minutes
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
